fix: code comments going out of bounds

--- a/styles/main.css
+++ b/styles/main.css
@@ -637,7 +637,11 @@ td {
   color: var(--color-code-blue);
 }
 
-.hljs-comment,
+.hljs-comment {
+  word-break: break-word;
+  color: var(--color-code-grey)
+}
+
 .code-comment {
   color: var(--color-code-grey);
 }
